--- a/Train.ipynb
+++ b/Train.ipynb
@@ -24,7 +24,8 @@
    "outputs": [],
    "source": [
     "from advanced_dataloading import process_folder\n",
-    "from advanced_preprocessing import frame_waves, valid_velo_data, save_second_scaler\n",
+    "from advanced_preprocessing import frame_waves, valid_velo_data, save_second_scaler, random_noise, \n",
+    "duplicate_and_augment_data, flatten_data_distribution, bin_data, calculate_duplication_factors\n",
     "from models import load_scalers, load_models, LSTMModel, GRUModel"
    ]
   },
@@ -71,7 +72,12 @@
    ],
    "source": [
     "df = process_folder(path_to_data, path_to_output, plot=False, labels=True)\n",
-    "feature_scaler, target_scaler, X_train, y_train, X_val, y_val, X_test, y_test = save_second_scaler(df)"
+    "feature_scaler, target_scaler, X_train, y_train, X_val, y_val, X_test, y_test = save_second_scaler(df)\n",
+    "X_train, y_train = random_noise(X_train, y_train, chance, random_seed = 0)\n",
+    "hist, bin_indices = bin_data(y_train, bins)\n",
+    "factors = calculate_duplication_factors(hist)\n",
+    "X_train, y_train = duplicate_and_augment_data(X_train, y_train, bin_indices, factors, noise=0.005)\n",
+    "X_train, y_train = flatten_data_distribution(X, y, bins, scaling_factor=0.5, noise=0.005)"
    ]
   },
   {
@@ -380,7 +386,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.9"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
