--- a/new_main.ipynb
+++ b/new_main.ipynb
@@ -25,11 +25,14 @@
     "gru1 = GRUModel(input_size=1, hidden_size=20, num_layers=2)\n",
     "gru1.load_state_dict(torch.load(r'path_to_your_model\\your_model_weights.h5', map_location='cpu'))\n",
     "gru1.eval()\n",
-    "gru1 = GRUModel(input_size=1, hidden_size=20, num_layers=2)\n",
     "\n",
+    "gru2 = GRUModel(input_size=1, hidden_size=25, num_layers=2)\n",
     "gru2.load_state_dict(torch.load(r'path_to_your_model\\your_model_weights.h5', map_location='cpu'))\n",
     "gru2.eval()\n",
-    "gru2.eval(), gru2.eval(), lstm.eval()\n",
+    "\n",
+    "lstm = LSTMModel(input_size=1, hidden_size=25, num_layers=2)\n",
+    "lstm.load_state_dict(torch.load(r'path_to_your_model\\your_model_weights.h5', map_location='cpu'))\n",
+    "lstm.eval()\n",
     "\n",
     "feature_scaler, target_scaler, feature_scaler2 = load_scalers()\n",
     "\n",
